# plantuml2freemind

./: .gitignore  .travis.aml  .travis.yml  README.md  converter_freemind.py  pyproject.toml  setup.cfg
examples/: small_teamlead_roadmap.puml
plantuml2freemind/: __main__.py  cli.py  cli_commands.py  converter_freemind.py  custom_types.py  puml_parser.py
plantuml2freemind/generators/: __init__.py  freemind.py  mapping.py  markdown.py  plantuml.py  yaml.py
plantuml2freemind/parsers/: __init__.py  mapping.py  plantuml.py  yaml.py
