[tool.poetry]
name = "plantuml2freemind"
version = "0.3.0"
description = "Converts plantuml mindmaps to freemind .mm files"
authors = ["Boger <kotvberloge@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
plantuml2freemind = 'plantuml2freemind.cli:main'