[tool.poetry]
name = "plantuml2freemind"
version = "0.7.2"
description = "Converts plantuml mindmaps to freemind .mm files"
authors = ["Boger <kotvberloge@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/b0g3r/plantuml2freemind"
homepage = "https://github.com/b0g3r/plantuml2freemind"
keywords = ['plantuml', 'freemind', 'puml', 'mm', 'converter']


[tool.poetry.dependencies]
python = "^3.7"
attrs = "^19.3.0"
pyyaml = "^5.3"
cleo = "^0.7.6"

[tool.poetry.dev-dependencies]
mypy = "^0.761"

[tool.poetry.scripts]
plantuml2freemind = 'plantuml2freemind.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
